--- a/Exercise8/AIP-EX08-Rosete-Borja.tex
+++ b/Exercise8/AIP-EX08-Rosete-Borja.tex
@@ -60,12 +60,13 @@ that is necessary to extract a solution}
 \end{enumerate}
 
 %%%%%%%%%%%%%%%%%%%%%  Ejercicio 2 %%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{Exercise 8.1 - Finite domain representation}
+\section*{Exercise 8.2 - Finite domain representation}
 \textbf{(a)Specify a planning taskt $\Pi'$ that is equivalent to $\Pi$
 in a finite-domain representation.}\\
 
 FDR planning task $\Pi' = \langle V, I', O', \gamma' \rangle$
-\[V = \{ above-a, above-b, above-c, below-a, below-b, below-c \} \]
+\[V = \{ above\text{-}a, above\text{-}b, above\text{-}c, 
+		below\text{-}a, below\text{-}b, below\text{-}c \} \]
 \begin{multicols}{2}
 	\begin{center}
 	$ \pazocal{D}_{above\text{-}a} = \{b, c, nothing\} $\\
