--- a/Exercise10/AIP-EX10-Rosete-Borja.tex
+++ b/Exercise10/AIP-EX10-Rosete-Borja.tex
@@ -50,10 +50,12 @@ Recall: For a transition system $\pazocal{A}$ and a label $l$ of $\pazocal{A}$, 
 Prove the following: Let $\pazocal{A}_i$ be an abstraction of some transition system $\pazocal{T}$ with abstraction mapping $\alpha_i$ for $i \in \{1, 2\}$. If no label of $\pazocal{T}$ affects both $\pazocal{A}_1$ and $\pazocal{A}_2$, then $\alpha_1$ and $\alpha_2$ are orthogonal.\\
 
 Take an arbitrary label $l \in \pazocal{T}$, by the premise we know that this label can affect at most one abstraction $\pazocal{A}_i$ for $i \in \{1, 2\}$. If it doesn't affect any abstraction $\pazocal{A}_i$ then there is no transition $\langle s, l ,t \rangle \in \pazocal{T}$ such that 
-$\alpha_1(s) \neq \alpha_1(t)$ or $\alpha_2(s) \neq \alpha_2(t)$.\\
+$\alpha_1(s) \neq \alpha_1(t)$ or $\alpha_2(s) \neq \alpha_2(t)$.
+
 If the label affects only one abstraction, we take the affected abstraction $\pazocal{A}_i$, we know there is at least one $\langle s, l ,t \rangle \in \pazocal{T}$ such that 
 $\alpha_i(s) \neq \alpha_i(t)$, but in the other abstraction $\pazocal{A}_j$ where $j \in \{1,2\}$ and $j \neq i$ for each transition $\langle s, l ,t \rangle$ of $\pazocal{T}$ we have
-$\alpha_j(s) = \alpha_j(t)$ as the label does not affect $\pazocal{A}_j$.\\
+$\alpha_j(s) = \alpha_j(t)$ as the label does not affect $\pazocal{A}_j$.
+
 Therefore no matter which label $l$ is selected there is no transition $\langle s, l, t \rangle \in \pazocal{T}$ where $\alpha_i(s) \neq \alpha_i(t)$ for both $i \in \{1, 2\}$ then by definition $\alpha_1$ and $\alpha_2$ are orthogonal.
 	
 %%%%%%%%%%%%%%%%%%%%%  Ejercicio 2 %%%%%%%%%%%%%%%%%%%%%%%%%
@@ -65,16 +67,47 @@ be the potential heuristic with potentials $w_{v=d}$ for all $v \in V , d \in \p
 Prove: Then $h$ is consistent, i. e., $h(s) - h(t) \leq cost(o)$ for all transitions $(s, o, t)$ in $\pazocal{T}(\Pi)$.\\
 
 Taking an arbitrary transition $(s, o, t)$ in $\pazocal{T}(\Pi)$ as it is consistent\\
+
+\[		h(s) - h(t) \leq cost(o) \]
+
 \begin{equation*}
 	\begin{aligned}
-		h(s) - h(t) \leq cost(o)\\
 		\iff \sum_{fact\:v=d} w_{v=d} \cdot f_{v=d}(s) + \sum_{fact\:v=d} w_{v=d} \cdot f_{v=d}(t) \leq cost(o)
 	\end{aligned}
 \end{equation*}
-f
+
+\begin{multicols}{2}
+	\begin{equation*}
+		f_{v=d}(s)=
+		\begin{cases}
+		0, & \text{if } s\: \not\models v=d \\
+		1, & \text{if } s\: \models v=d
+		\end{cases}
+	\end{equation*}
+
+	\begin{equation*}
+		f_{v=d}(t)=
+		\begin{cases}
+		0, & \text{if } t\: \not\models v=d \\
+		1, & \text{if } t\: \models v=d
+		\end{cases}
+	\end{equation*}
+\end{multicols}
+
 \begin{equation*}
 	\begin{aligned}
-		\iff \sum_{fact\:v=d} w_{v=d} \cdot f_{v=d}(s) + \sum_{fact\:v=d} w_{v=d} \cdot f_{v=d}(t) \leq cost(o)\\
+		\iff \sum_{\substack{fact\:v=d \\ s\:\models\: v=d}} w_{v=d} + \sum_{\substack{fact\:v=d \\ t\: \models\: v=d}} w_{v=d} \leq cost(o)\\
+	\end{aligned}
+\end{equation*}
+We know that in the transition $(s, o, t)$ the $vars(t) = vars(s) -$ consumed $vars$ by o $+$ produced $vars$ by o, therefore:
+\begin{equation*}
+	\begin{aligned}
+		\iff \sum_{\substack{fact\:v=d \\ s\:\models\: v=d}} w_{v=d} - 
+			  \left[ \sum_{\substack{fact\:v=d \\ s\:\models \: v=d}} w_{v=d} - 
+			  \sum_{\substack{fact\:v=d \\ \text{consumed by o}}} w_{v=d} + 
+			  \sum_{\substack{fact\:v=d\\ \text{produced by o}}} w_{v=d} \right] \leq cost(o) \\
+		\iff \sum_{\substack{fact\:v=d \\ \text{consumed by o}}} w_{v=d} -
+			 \sum_{\substack{fact\:v=d\\ \text{produced by o}}} w_{v=d} \leq cost(o) 
 	\end{aligned}
 \end{equation*}
 
