--- a/Exercise13/AIP-EX13-Rosete-Borja.tex
+++ b/Exercise13/AIP-EX13-Rosete-Borja.tex
@@ -45,8 +45,8 @@
 
 
 %%%%%%%%%%%%%%%%%%%%%  Ejercicio 1 %%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{Exercise 11.1 - Strong stubborn sets}
-
+\section*{Exercise 13.1 - EVMDDs}
+(a)
 \begin{center}
 	\begin{tikzpicture}
 		\begin{scope}
@@ -94,8 +94,12 @@
     \end{tikzpicture}
 \end{center}
 
-
 %%%%%%%%%%%%%%%%%%%%%  Ejercicio 2 %%%%%%%%%%%%%%%%%%%%%%%%%
-\section*{Exercise 11.2 - Weak vs. strong stubborn sets}
+\section*{Exercise 13.2 - EVMDD sizes and variable orders}
+
+
+%%%%%%%%%%%%%%%%%%%%%  Ejercicio 3 %%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%  Ejercicio 4 %%%%%%%%%%%%%%%%%%%%%%%%%
 
 \end{document}
